src/test/deca/syntax/valid/synt/simple_class_without_extends.deca
/*
    Description : classe qui n'étends rien

    Résultat : OK
*/
class A {}
