src/test/deca/syntax/invalid/synt/field_this.deca
/*
    Description : Classe nommée this

    Résultat : Erreur syntaxique
*/
class a{
    int this;
}
